--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "zed_squirrel"
-version = "0.0.1"
+name = "zed-squirrel"
+version = "0.1.0"
 edition = "2021"
 publish = false
 license = "MIT"
@@ -10,4 +10,4 @@ path = "src/squirrel.rs"
 crate-type = ["cdylib"]
 
 [dependencies]
-zed_extension_api = "0.1.0"
+zed_extension_api = "0.2.0"
